fix nightmode icon making text wrap

--- a/style.css
+++ b/style.css
@@ -53,11 +53,11 @@ body {
   padding: 20px;
 }
 .dayIcon {
-  margin: 10px;
   width: 64px;
-  position: relative;
-  float: right;
   cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 25px;
 }
 
 /* dark mode */
@@ -70,11 +70,11 @@ body {
   padding: 20px;
 }
 .nightIcon {
-  margin: 10px;
   width: 64px;
-  position: relative;
-  float: right;
   cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 25px;
   filter: invert(100%);
 }
 
